fixed where when form isnt completed, it is margined out of the container

--- a/themes/linc-edge/sass/_signup.scss
+++ b/themes/linc-edge/sass/_signup.scss
@@ -97,7 +97,7 @@
        
     }
     .name-signup{
-        margin-left:10%;
+        text-align: center;
     }
 
 
